updated side-bar collapsing and side-bar content

--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@
 <body>
 
     <div id="wrapper">
-
+        	<!-- top navbar -->
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+       <div class="container">
+    	<div class="navbar-header">
+           <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar-nav">
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+             <span class="icon-bar"></span>
+           </button>
+           <a class="navbar-brand" href="#">Python Tutorial</a>
+    	</div>
+       </div>
+    </div>
+<div class="row row-offcanvas row-offcanvas-left">
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
@@ -39,26 +52,74 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">Topic 1</a>
+                    <a class="disappear-1" href="#1">Part I: Plotting</a>
+                    <a id="link-1" href="#1-1" style="display: none">1. Plotting Functions</a>
+                    <a id="link-2" href="#1-2" style="display: none">2. Implicit Plot</a>
+                    <a id="link-3" href="#1-3" style="display: none">3. Vertical and Horizontal Lines</a>
+                    <a id="link-4" href="#1-4" style="display: none">4. Figures with Arrows</a>
+                    <a id="link-5" href="#1-5" style="display: none">5. Electronic Circuits</a>
+                    <a id="link-6" href="#1-6" style="display: none">6. Labeling Figures</a>
+                    <a id="link-7" href="#1-7" style="display: none">7. Polar Plot</a>
+                    <a id="link-8" href="#1-8" style="display: none">8. Some Famous Curves</a>
+                    <a id="link-9" href="#1-9" style="display: none">9. References</a>
                 </li>
                 <li>
-                    <a href="#">Topic 2</a>
+                    <a class="disappear-2" href="#2">Part 2: First Order ODEs</a>
+                    <a id="link-11" href="#2-1" style="display: none">1. Solving ODEs</a>
+                    <a id="link-12" href="#2-2" style="display: none">2. Direction Fields</a>
+                    <a id="link-13" href="#2-3" style="display: none">3. Separable Equations</a>
+                    <a id="link-14" href="#2-4" style="display: none">4. Equations Reducible to the Separable Equations</a>
+                    <a id="link-15" href="#2-5" style="display: none">5. Exact Equations</a>
+                    <a id="link-16" href="#2-6" style="display: none">6. Integrating Factors</a>
+                    <a id="link-17" href="#2-7" style="display: none">7. Linear and Bernoulli Equations</a>
+                    <a id="link-18" href="#2-8" style="display: none">8. Riccati Equations</a>
+                    <a id="link-19" href="#2-9" style="display: none">9. Existence and Uniqueness</a>
+                    <a id="link-20" href="#2-10" style="display: none">10. Qualitative Analysis</a>
+                    <a id="link-21" href="#2-11" style="display: none">11. Applications</a>
+                    <a id="link-22" href="#2-12" style="display: none">12. References</a>
                 </li>
                 <li>
-                    <a href="#">Topic 3</a>
+                    <a class="disappear-3" href="#2">Part 3: Numerical Methods and Applications</a>
+                    <a id="link-31" href="#3-1" style="display: none">1. Numerical Solution using DSolve and NDSolve</a>
+                    <a id="link-32" href="#3-2" style="display: none">2. Euler's Methods</a>
+                    <a id="link-33" href="#3-3" style="display: none">3. Polynomial Approximations</a>
+                    <a id="link-34" href="#3-4" style="display: none">4. Runge-Kutta Methods</a>
+                    <a id="link-35" href="#3-5" style="display: none">5. Multistep Methods</a>
+                    <a id="link-36" href="#3-6" style="display: none">6. Numerov Method</a>
+                    <a id="link-37" href="#3-7" style="display: none">7. Applications</a>
+                    <a id="link-38" href="#3-8" style="display: none">8. References</a>
                 </li>
                 <li>
-                    <a href="#">Topic 4</a>
+                    <a class="disappear-4" href="#3">Part 4: Second and Higher Order Differential Equations</a>
+                    <a id="link-41" href="#4-1" style="display: none">1. Fundamental Set of Solutions</a>
+                    <a id="link-42" href="#4-2" style="display: none">2. General Solutions of Homogenous Equations</a>
+                    <a id="link-43" href="#4-3" style="display: none">3. Reduction of Order</a>
+                    <a id="link-44" href="#4-4" style="display: none">4. Variation of Parameters/Lagrange</a>
+                    <a id="link-45" href="#4-5" style="display: none">5. Method of Undetermined Coefficients</a>
+                    <a id="link-46" href="#4-6" style="display: none">6. Operator Method</a>
+                    <a id="link-47" href="#4-7" style="display: none">7. Applications</a>
+                    <a id="link-48" href="#4-8" style="display: none">8. References</a>
                 </li>
                 <li>
-                    <a href="#">Topic 5</a>
+                    <a class="disappear-5" href="#5">Part 5: Series and Recurrences</a>
+                    <a id="link-51" href="#5.1" style="display: none">1. Recurrences</a>
+                    <a id="link-52" href="#5.2" style="display: none">2. Generating Functions</a>
+                    <a id="link-53" href="#5.3" style="display: none">3. Series Solutions for the first Order Equations</a>
+                    <a id="link-54" href="#5.4" style="display: none">4. Series Solutions for the second Order Equations</a>
+                    <a id="link-55" href="#5.5" style="display: none">5. Series Solutions</a>
+                    <a id="link-56" href="#5.6" style="display: none">6. Motivated Examples from Music</a>
                 </li>
                 <li>
-                    <a href="#">Topic 6</a>
+                    <a class="disappear-6" href="#6">Part 6: Laplace Transformation</a>
+                    <a id="link-61" href="#6.1" style="display: none">1. Laplace Transform</a>
+                    <a id="link-62" href="#6.2" style="display: none">2. Heavyside Function</a>
+                    <a id="link-63" href="#6.3" style="display: none">3. Laplace Transform of Discontinuous Functions</a>
+                    <a id="link-64" href="#6.4" style="display: none">4. Inverse Laplace Transforms</a>
+                    <a id="link-65" href="#6.5" style="display: none">5. Differential Equations</a>
+                    <a id="link-66" href="#6.6" style="display: none">6. Mechanical and Electrical Applications</a>
+                    <a id="link-67" href="#6.7" style="display: none">7. Reference</a>
                 </li>
                 <li>
-                    <a href="#">Topic 7</a>
-                </li>
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -68,31 +129,38 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
+                        <div class="page-title">
                         <h1>Python Tutorial</h1>
+                        </div>
                         <p>Tutorial introduction here.</p>
                         <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+                        <!--<div class="vanish">
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Collapse Sidebar</a>
+                        </div>-->
                     </div>
                 </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
-
+</div>
     </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
+    <script src="js/custom.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
-    $("#menu-toggle").click(function(e) {
+    $(".menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
+    $("")
+
     </script>
 
 </body>
