--- a/index.html
+++ b/index.html
@@ -133,17 +133,225 @@
                         <h1>Python Tutorial</h1>
                         </div>
                         <p>Tutorial introduction here.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <!--<div class="vanish">
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Collapse Sidebar</a>
-                        </div>-->
+                        <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                Return to ...
+                            <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="http://www.cfm.brown.edu/people/dobrush/am33/computing33.html">computing for APMA0330</a></li>
+                                  <li><a href="http://www.cfm.brown.edu/people/dobrush/am34/computing.html">computing for APMA0340</a></li>
+                                  <li><a href="#">Python tutorial for APMA0340</a></li>
+                                  <li><a href="http://www.cfm.brown.edu/people/dobrush/am33/SymPy/index.html">SymPy tutorial</a></li>
+                            </ul>
+                          </div>
+                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.
+                        <!--
+                            1. For each new roman numeral, add a section (I have included two below as an example)
+                            2. For each new subsection, add a span. I've included a few below as an example
+                            3. Match the "href" in the side bar links with the id of the sections/spans for seamless linking
+                            4. I've also included examples about how to include snippets of code to the page as well.
+                        -->
+                        <section id="1">
+                            <h2>I. Plotting</h2>
+                            <br>
+                                <span id="1-1">
+                                    <h3> 1. Plotting Functions</h2>
+                                    <code>This section is for one lines of code. </code>
+                                    <pre><code>This section is for longer lines of code.
+Code snippet goes here... 
+And another line of sample text here...;
+                                    </code></pre>
+                                </span>
+                                <span id="1-2">
+                                    <h3> 2. Implicit Plot </h3>
+                                    <code>This section is for one lines of code. </code>
+                                    <pre><code>This section is for longer lines of code.
+Code snippet goes here... 
+And another line of sample text here...;
+</code></pre>
+                                    </span>
+                                    <span id="1-3">
+                                        <h3> 3. Vertical and Horizontal Lines</h3>
+                                    </span>
+                            <span id="1-4">
+                                        <h3> 4. Figures with Arrows</h3>
+                                    </span>
+                                    <span id="1-5">
+                                        <h3> 5. Electronic Circuits</h3>
+                                    </span>
+                                    <span id="1-6">
+                                        <h3> 6. Labeling Figures</h3>
+                                    </span>
+                                    <span id="1-7">
+                                        <h3> 7. Polar Plot</h3>
+                                    </span>
+                                    <span id="1-8">
+                                        <h3> 8. Some Famous Curves</h3>
+                                    </span>
+                                    <span id="1-9">
+                                        <h3> 9. References</h3>
+                                    </span>
+                        </p>
+                        </section>
+
+           
+                        <section id="2">
+                            <h2>II. First Order ODEs</h2>
+                            <br>
+                            <span id="2-1">
+                                <h3>1. Solving ODEs</h3>
+                                    <code>This section is for one lines of code. </code>
+                                    <pre><code>This section is for longer lines of code.
+Code snippet goes here... 
+And another line of sample text here...;
+</code></pre>   
+                                </span>
+                                <span id="2-2">
+                                    <h3>2. Direction Fields</h3>
+                                    </span>
+                                    <span id="2-3">
+                                    <h3>3. Separable Equations</h3>
+                                    </span>
+                                    <span id="2-4">
+                                    <h3>4. Equations Reducible to the Separable Equations</h3>
+                                    </span>
+                                    <span id="2-5">
+                                    <h3>5. Exact Equations</h3>
+                                    </span>
+                                    <span id="2-6">
+                                    <h3>6. Integrating Factors</h3>
+                                    </span>
+                                    <span id="2-7">
+                                    <h3>7. Linear and Bernoulli Equations</h3>
+                                    </span>
+                                    <span id="2-8">
+                                    <h3>8. Riccati Equations</h3>
+                                    </span>
+                                    <span id="2-9">
+                                    <h3>9. Existence and Uniqueness</h3>
+                                    </span>
+                                    <span id="2-10">
+                                    <h3>11. Applications</h3>
+                                    </span>
+                                    <span id="2-11">
+                                    <h3>12. References</h3>
+                                    </span>
+                            </section>
+                            <section id="3">
+                                <h2>III. Numerical Methods and Applications</h2>
+                                <br>
+                                <span id="3-1">
+                                    <h3>1. Numerical Solution using DSolve and NDSolve</h3>
+                                    </span>
+                                    <span id="3-2">
+                                    <h3>2. Euler's Methods</h3>
+                                    </span>
+                                    <span id="3-3">
+                                    <h3>3. Polynomial Approximations</h3>
+                                    </span>
+                                    <span id="3-4">
+                                    <h3>4. Runge-Kutta Methods</h3>
+                                    </span>
+                                    <span id="3-5">
+                                    <h3>5. Multistep Methods</h3>
+                                    </span>
+                                    <span id="3-6">
+                                    <h3>6. Numerov Method</h3>
+                                    </span>
+                                    <span id="3-7">
+                                    <h3>7. Applications</h3>
+                                    </span>
+                                    <span id="3-8">
+                                    <h3>8. References</h3>
+                                    </span>
+                            </section>
+                            <section id="4">
+                                <h2>IV. Numerical Methods and Applications</h2>
+                                <br>
+                                <span id="4-1">
+                                    <h3>1. Fundamental Set of Solutions</h3>
+                                    </span>
+                                    <span id="4-2">
+                                    <h3>2. General Solutions of Homogenous Equations</h3>
+                                    </span>
+                                    <span id="4-3">
+                                    <h3>3. Reduction of Order</h3>
+                                    </span>
+                                    <span id="4-4">
+                                    <h3>4. Variation of Parameters/Lagrange</h3>
+                                    </span>
+                                    <span id="4-5">
+                                    <h3>5. Method of Undetermined Coefficients</h3>
+                                    </span>
+                                    <span id="4-6">
+                                    <h3>6. Operator Method</h3>
+                                    </span>
+                                    <span id="4-7">
+                                    <h3>7. Applications</h3>
+                                    </span>
+                                    <span id="4-8">
+                                    <h3>8. References</h3>
+                                    </span>
+                            </section>
+                
+
+
+                            <section id="5">
+                                <h2>V. Series and Recurrences</h2>
+                                <br>
+                                <span id="5-1">
+                                    <h3>1. Recurrences</h3>
+                                    </span>
+                                    <span id="5-2">
+                                    <h3>2. Generating Functions</h3>
+                                    </span>
+                                    <span id="5-3">
+                                    <h3>3. Series Solutions for the First Order Equations</h3>
+                                    </span>
+                                    <span id="5-4">
+                                    <h3>4. Series Solutions for the Second Order Equations</h3>
+                                    </span>
+                                    <span id="5-5">
+                                    <h3>5. Series Solutions</h3>
+                                    </span>
+                                    <span id="5-6">
+                                    <h3>6. Motivated Examples from Music</h3>
+                                    </span>
+                            </section>
+
+                            <section id="6">
+                                <h2>VI. Laplace Transformation</h2>
+                                <br>
+                                <span id="5-1">
+                                    <h3>1. Laplace Transform</h3>
+                                    </span>
+                                    <span id="5-2">
+                                    <h3>2. Heavyside Function</h3>
+                                    </span>
+                                    <span id="5-3">
+                                    <h3>3. Laplace Transform of Discontinuous Functions</h3>
+                                    </span>
+                                    <span id="5-4">
+                                    <h3>4. Inverse Laplace Transforms</h3>
+                                    </span>
+                                    <span id="5-5">
+                                    <h3>5. Mechanical and Electrical Applications</h3>
+                                    </span>
+                                    <span id="5-6">
+                                    <h3>6. Motivated Examples from Music</h3>
+                                    </span>
+                                    <span id="5-7">
+                                    <h3>7. Reference</h3>
+                                    </span>
+                            </section>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
 </div>
-    </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
