Added 3D plotting images and code to index.html

--- a/am34/part3.html
+++ b/am34/part3.html
@@ -63,7 +63,7 @@ button {
                     <a class="" href="index.html">Preface</a>
                 </li>
                 <li>
-                    <a class="disappear-1" href="#">Part I: Matrix Algebra</a>
+                    <a class="disappear-1" href="part1.html">Part I: Matrix Algebra</a>
                     <a id="link-1" href="part1.html#1-1" style="display: none">1. How to define Matrices</a>
                     <a id="link-2" href="part1.html#1-2" style="display: none">2. Basic Operations with Matrices</a>
                     <a id="link-3" href="part1.html#1-3" style="display: none">3. Determinants and Inverses</a>
@@ -76,14 +76,31 @@ button {
                     <a id="link-10" href="part1.html#1-10" style="display: none">10. Positive Matrices</a>
                     <a id="link-10.1" href="part1.html#1-10.1" style="display: none">11. Miscellaneous</a>
                 </li>
-                
                 <li>
-                    <a class="disappear-2" href="#">Part 2: Linear Systems of Ordinary Differential Equations</a>
+                    <a class="disappear-0" href="linalg.html">Part 2: Linear Systems of Algebraic Equations</a>
+                    <a id="link-111" href="linalg.html#2-1" style="display: none">1. Matrices and Vectors</a>
+                    <a id="link-112" href="linalg.html#2-2" style="display: none">2. Python solves linear systems</a>
+                    <a id="link-113" href="linalg.html#2-3" style="display: none">3. Elementary Row Operations</a>
+                    <a id="link-114" href="linalg.html#2-4" style="display: none">4. Row Echelon Forms</a>
+                    <a id="link-115" href="linalg.html#2-5" style="display: none">5. LU-factorization</a>
+                    <a id="link-116" href="linalg.html#2-6" style="display: none">6. Row Space and Column Space</a>
+                    <a id="link-117" href="linalg.html#2-7" style="display: none">7. Null Space or Kernel</a>
+                    <a id="link-118" href="linalg.html#2-8" style="display: none">8. Rank and Nullity</a>
+                    <a id="link-119" href="linalg.html#2-9" style="display: none">9. Square Matrices</a>
+                    <a id="link-210" href="linalg.html#2-10" style="display: none">10. Projection Operators</a>
+                    <a id="link-211" href="linalg.html#2-11" style="display: none">11. Least Square Approximation</a>
+                    <a id="link-212" href="linalg.html#2-12" style="display: none">11. SVD factorization</a>
+                    <a id="link-213" href="linalg.html#2-13" style="display: none">12. Numerical Methods</a>
+                    <a id="link-214" href="linalg.html#2-14" style="display: none">13. Inequalities</a>
+                    <a id="link-215" href="linalg.html#2-15" style="display: none">14. Applications</a>
+                </li>
+                <li>
+                    <a class="disappear-2" href="part2.html">Part 3: Linear Systems of Ordinary Differential Equations</a>
                     <a id="link-11" href="part2.html#2-1" style="display: none">1. Systems of ordinary differential equations</a>
                     <a id="link-12" href="part2.html#2-2" style="display: none">2. Constant coefficient equations</a>
                     <a id="link-13" href="part2.html#2-3" style="display: none">3. Direction Fields</a>
                     <a id="link-14" href="part2.html#2-4" style="display: none">4. Exponential matrix</a>
-                    <a id="link-15" href="part2.html#2-5" style="display: none">5. Reduction to systems of ODEs</a>
+                    <a id="link-15" href="part2.html#2-5" style="display: none">5. Planar Phase Portraits</a>
                     <a id="link-16" href="part2.html#2-6" style="display: none">6. Variation of parameters</a>
                     <a id="link-17" href="part2.html#2-7" style="display: none">7. Method of Undetermined Coefficients</a>
                     <a id="link-18" href="part2.html#2-8" style="display: none">8. Linear and Bernoulli Equations</a>
@@ -92,19 +109,19 @@ button {
                     <a id="link-21" href="part2.html#2-11" style="display: none">11. References</a>
                 </li>
                 <li>
-                    <a class="disappear-3" href="#">Part 3: Non-linear Systems of Ordinary Differential Equations</a>
-                    <a id="link-31" href="part3.html#3-1" style="display: none">1. Planar case</a>
-                    <a id="link-32" href="part3.html#3-2" style="display: none">2. Autonomous systems of ODEs</a>
-                    <a id="link-33" href="part3.html#3-3" style="display: none">3. Linearization</a>
-                    <a id="link-34" href="part3.html#3-4" style="display: none">4. Euler systems of ODEs</a>
-                    <a id="link-35" href="part3.html#3-5" style="display: none">5. Conservative systems</a>
-                    <a id="link-36" href="part3.html#3-6" style="display: none">6. Lyapunov second method</a>
-                    <a id="link-37" href="part3.html#3-7" style="display: none">7. Periodic solutions</a>
-                    <a id="link-38" href="part3.html#3-8" style="display: none">8. Applications</a>
-                    <a id="link-39" href="part3.html#3-9" style="display: none">9. References</a>
+                    <a class="disappear-3" href="#">Part 4: Non-linear Systems of Ordinary Differential Equations</a>
+                    <a id="link-31" href="#3-1" style="display: block">1. Planar case</a>
+                    <a id="link-32" href="#3-2" style="display: block">2. Autonomous systems of ODEs</a>
+                    <a id="link-33" href="#3-3" style="display: block">3. Linearization</a>
+                    <a id="link-34" href="#3-4" style="display: block">4. Euler systems of ODEs</a>
+                    <a id="link-35" href="#3-5" style="display: block">5. Conservative systems</a>
+                    <a id="link-36" href="#3-6" style="display: block">6. Lyapunov second method</a>
+                    <a id="link-37" href="#3-7" style="display: block">7. Periodic solutions</a>
+                    <a id="link-38" href="#3-8" style="display: block">8. Applications</a>
+                    <a id="link-39" href="#3-9" style="display: block">9. References</a>
                 </li>
                 <li>
-                    <a class="disappear-4" href="#">Part 4: Numerical Methods</a>
+                    <a class="disappear-4" href="part4.html">Part 5: Numerical Methods</a>
                     <a id="link-41" href="part4.html#4-1" style="display: none">1. General numerical methods</a>
                     <a id="link-42" href="part4.html#4-2" style="display: none">2. Euler algorithms</a>
                     <a id="link-43" href="part4.html#4-3" style="display: none">3. Polynomial approximations</a>
@@ -115,18 +132,18 @@ button {
                     <a id="link-48" href="part4.html#4-8" style="display: none">8. References</a>
                 </li>
                 <li>
-                    <a class="disappear-5" href="#">Part 5: Fourier Series</a>
-                    <a id="link-51" href="part6.html#5.1" style="display: none">1. Sturm--Liouville Problems</a>
-                    <a id="link-52" href="part6.html#5.2" style="display: none">2. Singular Sturm--Liouville Problems</a>
-                    <a id="link-53" href="part6.html#5.3" style="display: none">3. Orthogonal Expansions</a>
-                    <a id="link-54" href="part6.html#5.4" style="display: none">4. Fourier Series</a>
-                    <a id="link-55" href="part6.html#5.5" style="display: none">5. Cosine and Sine Fourier Series</a>
-                    <a id="link-56" href="part6.html#5.6" style="display: none">6. Cesaro Summation</a>
-                    <a id="link-57" href="part6.html#5.7" style="display: none">7. Gibbs Phenomenon</a>
-                    <a id="link-58" href="part6.html#5.8" style="display: none">8. Applications</a>
+                    <a class="disappear-5" href="part5.html">Part 6: Fourier Series</a>
+                    <a id="link-51" href="part5.html#5.1" style="display: none">1. Sturm--Liouville Problems</a>
+                    <a id="link-52" href="part5.html#5.2" style="display: none">2. Singular Sturm--Liouville Problems</a>
+                    <a id="link-53" href="part5.html#5.3" style="display: none">3. Orthogonal Expansions</a>
+                    <a id="link-54" href="part5.html#5.4" style="display: none">4. Fourier Series</a>
+                    <a id="link-55" href="part5.html#5.5" style="display: none">5. Cosine and Sine Fourier Series</a>
+                    <a id="link-56" href="part5.html#5.6" style="display: none">6. Cesaro Summation</a>
+                    <a id="link-57" href="part5.html#5.7" style="display: none">7. Gibbs Phenomenon</a>
+                    <a id="link-58" href="part5.html#5.8" style="display: none">8. Applications</a>
                 </li>
                 <li>
-                    <a class="disappear-6" href="#">Part 6: Partial Differential Equations</a>
+                    <a class="disappear-6" href="part6.html">Part 7: Partial Differential Equations</a>
                     <a id="link-61" href="part6.html#6.1" style="display: none">1. Heat Conduction Problems</a>
                     <a id="link-62" href="part6.html#6.2" style="display: none">2. Other Heat transfer equations</a>
                     <a id="link-63" href="part6.html#6.3" style="display: none">3. Wave equations</a>
