--- a/am34/index.html
+++ b/am34/index.html
@@ -60,10 +60,10 @@ button {
                     </a>
                 </li>
                 <li>
-                    <a class="" href="#">Preface</a>
+                    <a class="" href="index.html">Preface</a>
                 </li>
                 <li>
-                    <a class="disappear-1" href="#">Part I: Matrix Algebra</a>
+                    <a class="disappear-1" href="part1.html">Part I: Matrix Algebra</a>
                     <a id="link-1" href="part1.html#1-1" style="display: none">1. How to define Matrices</a>
                     <a id="link-2" href="part1.html#1-2" style="display: none">2. Basic Operations with Matrices</a>
                     <a id="link-3" href="part1.html#1-3" style="display: none">3. Determinants and Inverses</a>
@@ -76,14 +76,31 @@ button {
                     <a id="link-10" href="part1.html#1-10" style="display: none">10. Positive Matrices</a>
                     <a id="link-10.1" href="part1.html#1-10.1" style="display: none">11. Miscellaneous</a>
                 </li>
-                
                 <li>
-                    <a class="disappear-2" href="#">Part 2: Linear Systems of Ordinary Differential Equations</a>
+                    <a class="disappear-0" href="linalg.html">Part 2: Linear Systems of Algebraic Equations</a>
+                    <a id="link-111" href="linalg.html#2-1" style="display: none">1. Matrices and Vectors</a>
+                    <a id="link-112" href="linalg.html#2-2" style="display: none">2. Python solves linear systems</a>
+                    <a id="link-113" href="linalg.html#2-3" style="display: none">3. Elementary Row Operations</a>
+                    <a id="link-114" href="linalg.html#2-4" style="display: none">4. Row Echelon Forms</a>
+                    <a id="link-115" href="linalg.html#2-5" style="display: none">5. LU-factorization</a>
+                    <a id="link-116" href="linalg.html#2-6" style="display: none">6. Row Space and Column Space</a>
+                    <a id="link-117" href="linalg.html#2-7" style="display: none">7. Null Space or Kernel</a>
+                    <a id="link-118" href="linalg.html#2-8" style="display: none">8. Rank and Nullity</a>
+                    <a id="link-119" href="linalg.html#2-9" style="display: none">9. Square Matrices</a>
+                    <a id="link-210" href="linalg.html#2-10" style="display: none">10. Projection Operators</a>
+                    <a id="link-211" href="linalg.html#2-11" style="display: none">11. Least Square Approximation</a>
+                    <a id="link-212" href="linalg.html#2-12" style="display: none">11. SVD factorization</a>
+                    <a id="link-213" href="linalg.html#2-13" style="display: none">12. Numerical Methods</a>
+                    <a id="link-214" href="linalg.html#2-14" style="display: none">13. Inequalities</a>
+                    <a id="link-215" href="linalg.html#2-15" style="display: none">14. Applications</a>
+                </li>
+                <li>
+                    <a class="disappear-2" href="part2.html">Part 3: Linear Systems of Ordinary Differential Equations</a>
                     <a id="link-11" href="part2.html#2-1" style="display: none">1. Systems of ordinary differential equations</a>
                     <a id="link-12" href="part2.html#2-2" style="display: none">2. Constant coefficient equations</a>
                     <a id="link-13" href="part2.html#2-3" style="display: none">3. Direction Fields</a>
                     <a id="link-14" href="part2.html#2-4" style="display: none">4. Exponential matrix</a>
-                    <a id="link-15" href="part2.html#2-5" style="display: none">5. Reduction to systems of ODEs</a>
+                    <a id="link-15" href="part2.html#2-5" style="display: none">5. Planar Phase Portraits</a>
                     <a id="link-16" href="part2.html#2-6" style="display: none">6. Variation of parameters</a>
                     <a id="link-17" href="part2.html#2-7" style="display: none">7. Method of Undetermined Coefficients</a>
                     <a id="link-18" href="part2.html#2-8" style="display: none">8. Linear and Bernoulli Equations</a>
@@ -92,7 +109,7 @@ button {
                     <a id="link-21" href="part2.html#2-11" style="display: none">11. References</a>
                 </li>
                 <li>
-                    <a class="disappear-3" href="#">Part 3: Non-linear Systems of Ordinary Differential Equations</a>
+                    <a class="disappear-3" href="part3.html">Part 4: Non-linear Systems of Ordinary Differential Equations</a>
                     <a id="link-31" href="part3.html#3-1" style="display: none">1. Planar case</a>
                     <a id="link-32" href="part3.html#3-2" style="display: none">2. Autonomous systems of ODEs</a>
                     <a id="link-33" href="part3.html#3-3" style="display: none">3. Linearization</a>
@@ -104,7 +121,7 @@ button {
                     <a id="link-39" href="part3.html#3-9" style="display: none">9. References</a>
                 </li>
                 <li>
-                    <a class="disappear-4" href="#">Part 4: Numerical Methods</a>
+                    <a class="disappear-4" href="part4.html">Part 5: Numerical Methods</a>
                     <a id="link-41" href="part4.html#4-1" style="display: none">1. General numerical methods</a>
                     <a id="link-42" href="part4.html#4-2" style="display: none">2. Euler algorithms</a>
                     <a id="link-43" href="part4.html#4-3" style="display: none">3. Polynomial approximations</a>
@@ -115,18 +132,18 @@ button {
                     <a id="link-48" href="part4.html#4-8" style="display: none">8. References</a>
                 </li>
                 <li>
-                    <a class="disappear-5" href="#">Part 5: Fourier Series</a>
-                    <a id="link-51" href="part6.html#5.1" style="display: none">1. Sturm--Liouville Problems</a>
-                    <a id="link-52" href="part6.html#5.2" style="display: none">2. Singular Sturm--Liouville Problems</a>
-                    <a id="link-53" href="part6.html#5.3" style="display: none">3. Orthogonal Expansions</a>
-                    <a id="link-54" href="part6.html#5.4" style="display: none">4. Fourier Series</a>
-                    <a id="link-55" href="part6.html#5.5" style="display: none">5. Cosine and Sine Fourier Series</a>
-                    <a id="link-56" href="part6.html#5.6" style="display: none">6. Cesaro Summation</a>
-                    <a id="link-57" href="part6.html#5.7" style="display: none">7. Gibbs Phenomenon</a>
-                    <a id="link-58" href="part6.html#5.8" style="display: none">8. Applications</a>
+                    <a class="disappear-5" href="part5.html">Part 6: Fourier Series</a>
+                    <a id="link-51" href="part5.html#5.1" style="display: none">1. Sturm--Liouville Problems</a>
+                    <a id="link-52" href="part5.html#5.2" style="display: none">2. Singular Sturm--Liouville Problems</a>
+                    <a id="link-53" href="part5.html#5.3" style="display: none">3. Orthogonal Expansions</a>
+                    <a id="link-54" href="part5.html#5.4" style="display: none">4. Fourier Series</a>
+                    <a id="link-55" href="part5.html#5.5" style="display: none">5. Cosine and Sine Fourier Series</a>
+                    <a id="link-56" href="part5.html#5.6" style="display: none">6. Cesaro Summation</a>
+                    <a id="link-57" href="part5.html#5.7" style="display: none">7. Gibbs Phenomenon</a>
+                    <a id="link-58" href="part5.html#5.8" style="display: none">8. Applications</a>
                 </li>
                 <li>
-                    <a class="disappear-6" href="#">Part 6: Partial Differential Equations</a>
+                    <a class="disappear-6" href="part6.html">Part 7: Partial Differential Equations</a>
                     <a id="link-61" href="part6.html#6.1" style="display: none">1. Heat Conduction Problems</a>
                     <a id="link-62" href="part6.html#6.2" style="display: none">2. Other Heat transfer equations</a>
                     <a id="link-63" href="part6.html#6.3" style="display: none">3. Wave equations</a>
@@ -167,6 +184,157 @@ button {
                             Finally, the commands in this tutorial are all written in <b>bold black font</b>, while output is in regular fonts. This means that you can copy and paste all commands, change the parameters and run them. You, as the user, are free to use all codes for your needs, and have the right to distribute this tutorial and refer to this tutorial as long as this tutorial is accredited appropriately. Any comments and/or contributions for this tutorial are welcome; you can send your remarks to <a href="mailto:vladimir_dobrushkin@brown.edu">Vladimir_Dobrushkin@brown.edu</a>
 
                             </p>
+                            <h2>Introduction</h2>
+                            <p>Python is a widely used high-level programming language for general-purpose programming, created by Guido van Rossum and first released in 1991. An interpreted language, Python has a design philosophy which emphasizes code readability (notably using whitespace indentation to delimit code blocks rather than curly braces or keywords), and a syntax which allows programmers to express concepts in fewer lines of code than possible in languages such as C++ or Java. The language provides constructs intended to enable writing clear programs on both a small and large scale.<br>
+                            <br>Python features a dynamic type system and automatic memory management and supports multiple programming paradigms, including object-oriented, imperative, functional programming, and procedural styles. It has a large and comprehensive standard library.<br>
+                            <br> Python interpreters are available for many operating systems, allowing Python code to run on a wide variety of systems. CPython, the reference implementation of Python, is open source software and has a community-based development model, as do nearly all of its variant implementations. CPython is managed by the non-profit Python Software Foundation.</p>
+                            <h2>3D Plots </h2>
+                            <p>Python also be used to create three-dimensional plots</p>
+                            <h3>Line Plots</h3>
+                            <p>We can use the code below to generate a 3D line plot</p>
+                            <pre><code>
+import matplotlib as mpl
+from mpl_toolkits.mplot3d import Axes3D
+import numpy as np
+import matplotlib.pyplot as plt
+
+mpl.rcParams['legend.fontsize'] = 10
+
+fig = plt.figure()
+ax = fig.gca(projection='3d')
+theta = np.linspace(-4 * np.pi, 4 * np.pi, 100)
+z = np.linspace(-2, 2, 100)
+r = z**2 + 1
+x = r * np.sin(theta)
+y = r * np.cos(theta)
+ax.plot(x, y, z, label='parametric curve')
+ax.legend()
+
+plt.show()
+</code></pre>
+<img src="images/3D_line.png"></img>
+<h3>Scatterplot</h3>
+<p>We can use the code below to generate a 3D Scatterplot.</p>
+<pre><code>
+from mpl_toolkits.mplot3d import Axes3D
+import matplotlib.pyplot as plt
+import numpy as np
+
+
+def randrange(n, vmin, vmax):
+    '''
+    Helper function to make an array of random numbers having shape (n, )
+    with each number distributed Uniform(vmin, vmax).
+    '''
+    return (vmax - vmin)*np.random.rand(n) + vmin
+
+fig = plt.figure()
+ax = fig.add_subplot(111, projection='3d')
+
+n = 100
+
+# For each set of style and range settings, plot n random points in the box
+# defined by x in [23, 32], y in [0, 100], z in [zlow, zhigh].
+for c, m, zlow, zhigh in [('r', 'o', -50, -25), ('b', '^', -30, -5)]:
+    xs = randrange(n, 23, 32)
+    ys = randrange(n, 0, 100)
+    zs = randrange(n, zlow, zhigh)
+    ax.scatter(xs, ys, zs, c=c, marker=m)
+
+ax.set_xlabel('X Label')
+ax.set_ylabel('Y Label')
+ax.set_zlabel('Z Label')
+
+plt.show()
+</code></pre>
+<img src="images/3D_Scatterplot.png">
+<h3>Surface Plots</h3>
+<p>We can use the code below to generate a Surface plot.</p>
+<pre><code>
+from mpl_toolkits.mplot3d import Axes3D
+import matplotlib.pyplot as plt
+from matplotlib import cm
+from matplotlib.ticker import LinearLocator, FormatStrFormatter
+import numpy as np
+
+
+fig = plt.figure()
+ax = fig.gca(projection='3d')
+
+# Make data.
+X = np.arange(-5, 5, 0.25)
+Y = np.arange(-5, 5, 0.25)
+X, Y = np.meshgrid(X, Y)
+R = np.sqrt(X**2 + Y**2)
+Z = np.sin(R)
+
+# Plot the surface.
+surf = ax.plot_surface(X, Y, Z, cmap=cm.coolwarm,
+                       linewidth=0, antialiased=False)
+
+# Customize the z axis.
+ax.set_zlim(-1.01, 1.01)
+ax.zaxis.set_major_locator(LinearLocator(10))
+ax.zaxis.set_major_formatter(FormatStrFormatter('%.02f'))
+
+# Add a color bar which maps values to colors.
+fig.colorbar(surf, shrink=0.5, aspect=5)
+
+plt.show()
+
+</code></pre>
+<img src="images/3D_Surfaceplot.png">
+<h3>Quiver Plot</h3>
+<p>The code below plots a set of 3D arrows.</p>
+<pre><code>
+from mpl_toolkits.mplot3d import axes3d
+import matplotlib.pyplot as plt
+import numpy as np
+
+fig = plt.figure()
+ax = fig.gca(projection='3d')
+
+# Make the grid
+x, y, z = np.meshgrid(np.arange(-0.8, 1, 0.2),
+                      np.arange(-0.8, 1, 0.2),
+                      np.arange(-0.8, 1, 0.8))
+
+# Make the direction data for the arrows
+u = np.sin(np.pi * x) * np.cos(np.pi * y) * np.cos(np.pi * z)
+v = -np.cos(np.pi * x) * np.sin(np.pi * y) * np.cos(np.pi * z)
+w = (np.sqrt(2.0 / 3.0) * np.cos(np.pi * x) * np.cos(np.pi * y) *
+     np.sin(np.pi * z))
+
+ax.quiver(x, y, z, u, v, w, length=0.1, normalize=True)
+
+plt.show()
+</code></pre>
+<img src="images/3D_Quiver.png">
+<h3>Contour Plot</h3>
+<p>The following code plots a 3D contour plot.</p>
+<pre><code>
+from mpl_toolkits.mplot3d import axes3d
+import matplotlib.pyplot as plt
+from matplotlib import cm
+
+fig = plt.figure()
+ax = fig.gca(projection='3d')
+X, Y, Z = axes3d.get_test_data(0.05)
+ax.plot_surface(X, Y, Z, rstride=8, cstride=8, alpha=0.3)
+cset = ax.contour(X, Y, Z, zdir='z', offset=-100, cmap=cm.coolwarm)
+cset = ax.contour(X, Y, Z, zdir='x', offset=-40, cmap=cm.coolwarm)
+cset = ax.contour(X, Y, Z, zdir='y', offset=40, cmap=cm.coolwarm)
+
+ax.set_xlabel('X')
+ax.set_xlim(-40, 40)
+ax.set_ylabel('Y')
+ax.set_ylim(-40, 40)
+ax.set_zlabel('Z')
+ax.set_zlim(-100, 100)
+
+plt.show()
+</code></pre>
+<img src="images/3D_contour.png">
                         </div>
                     </div>
                 </div>
